# string-processing

./: CMakeLists.txt  main.cpp  readme.md
helpers/: errors.cpp  files_helpers.cpp  input_helpers.cpp
helpers/docs/: errors.md  files_helpers.md  input_helpers.md
helpers/includes/: errors.hpp  files_helpers.hpp  input_helpers.h
includes/: utilities.h  utilities.md
src/: file1.cpp  file2.c  file3.cpp
tools/: setConsoleUTF8.h
